--- a/bower.json
+++ b/bower.json
@@ -1,9 +1,9 @@
 {
-    "name": "angular-seed",
-    "description": "A starter project for AngularJS",
-    "version": "0.0.0",
-    "homepage": "https://github.com/angular/angular-seed",
-    "license": "MIT",
+    "name": "grunt-angular-bootstrap",
+    "description": "A starter project getting up and running with AngularJS, Express, Bootstrap, Grunt and Less",
+    "version": "0.1.0",
+    "homepage": "https://github.com/svenanders/grunt-angular-bootstrap",
+    "license": "Creative Commons",
     "private": true,
     "dependencies": {
         "angular": "latest",
