--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "grunt-angular-bootstrap",
-    "private": true,
+    "private": false,
     "version": "0.1.0",
     "description": "Angularjs template",
     "repository": "https://github.com/svenanders/grunt-angular-bootstrap",
